--- a/themes/perspective_theory_theme/layouts/index.html
+++ b/themes/perspective_theory_theme/layouts/index.html
@@ -2,13 +2,22 @@
 <html>
   {{ partial "head.html" . }}
   <body>
+    {{ partial "header.html" . }}
+
     <!-- MAIN -->
     <main class="pt__main">
       <div class="pt__main__hero">
         <h1>Perspective Theory</h1>
-        <p></p>
+        <h2></h2>
+
+        <div class="pt__main__summary">
+
+        </div>
       </div>
     </main>
+
+    {{ partial "footer.html" . }}
+
   </body>
 </html>
 
