footer with meee

--- a/themes/perspective_theory_theme/layouts/partials/footer.html
+++ b/themes/perspective_theory_theme/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <a href="/" class="header__logo__wrapper">
-    <h1 class="header__logo">NeverFap <span class="deluxe__font">Deluxe</span> <i class="em em-rainbow"></i></h1>
+    <h1 class="header__logo">Perspective Theory</span> <i class="em em-rainbow"></i></h1>
   </a>
   <div class="footer__designed">
-    Made in Melbourne, Australia <3. 
-  </div>    
+    Made in Melbourne, Australia <3.
+  </div>
 
   <ul class="footer__links">
     <a class="footer__link__wrapper" href="/privacy"><li class="footer__link">Privacy</li></a>
