--- a/themes/perspective_theory_theme/layouts/partials/head.html
+++ b/themes/perspective_theory_theme/layouts/partials/head.html
@@ -90,16 +90,17 @@
   <title>{{ if eq .Section "courses" }}{{ "NeverFap Deluxe Courses |"}}{{ else if eq .Section "articles"}}{{ "NeverFap Deluxe Articles |"}}{{ else if eq .Section "practices"}}{{ "NeverFap Deluxe Practices |"}}{{ else }}{{ "NeverFap Deluxe |"}}{{ end }} {{ .Title }}</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132863786-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132863786-6"></script>
   <script>
-    if (document.location.hostname.search("neverfapdeluxe.com") !== -1) {
+    // TODO I don't know what this is will be called yet.
+    if (document.location.hostname.search("perspectivetheory.com") !== -1) {
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-132863786-1');
+      gtag('config', 'UA-132863786-6');
     }
-  </script> -->
+  </script>
 
   <!-- Internal Templates -->
   {{/* template "_internal/google_analytics_async.html" . */}}
